fixing font color on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    color: rgb(16,16,16);
 }
 
 #projects{
